<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/default_margin"
    android:layout_marginRight="@dimen/default_margin"
    android:layout_marginBottom="80dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_page_upload_button"
            android:background="@color/darkRed"
            style="@style/TitleTextStyle"
            android:padding="@dimen/default_margin"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/trending2"/>

    </LinearLayout>
    
    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/add_page_name_input"
        android:paddingLeft="@dimen/default_margin"
        style="@style/DefaultTextStyle"/>

    <EditText
        android:id="@+id/appellation_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/add_page_appellation_input"
        android:paddingLeft="@dimen/default_margin"
        style="@style/DefaultTextStyle"/>

    <Spinner
        android:id="@+id/type_spinner"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:entries="@array/add_wine_page_type_input"
        android:paddingLeft="@dimen/default_margin"/>

    <Spinner
        android:id="@+id/year_spinner"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:entries="@array/add_wine_page_year_input"
        android:paddingLeft="@dimen/default_margin"/>

    <Spinner
        android:id="@+id/number_spinner"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:entries="@array/add_wine_page_number_input"
        android:paddingLeft="@dimen/default_margin"/>
    
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/darkGray"
        android:text="@string/add_page_confirm_button"
        android:textSize="24dp"
        android:textColor="@color/white"/>


</LinearLayout>